@@ -61,4 +61,4 @@ fi
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE(libgig, "$LIBGIG_CURRENT.$LIBGIG_REVISION.$LIBGIG_AGE")
 
-AC_OUTPUT(Makefile doc/Makefile man/Makefile src/Makefile libgig.spec gig.pc Doxyfile man/dlsdump.1 man/gigdump.1 man/gigextract.1 man/rifftree.1)
+AC_OUTPUT(Makefile doc/Makefile man/Makefile src/Makefile libgig.spec gig.pc Doxyfile man/dlsdump.1 man/gigdump.1 man/gigextract.1 man/rifftree.1 debian/Makefile)
