@@ -1,5 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
+AUTOMAKE_OPTIONS = dist-bzip2
+
 htmldir = $(htmldocdir)
 #html_DATA = index.html
 
